--- a/java/pom.xml
+++ b/java/pom.xml
@@ -23,10 +23,6 @@
 			</resource>
 			<resource>
 				<directory>src/main/run</directory>
-				<excludes>
-					<exclude>**/com/inetpsa/pmm/run/occurrence.properties</exclude>
-					<exclude>**/com/inetpsa/efl/run/occurrence.properties</exclude>
-				</excludes>
 			</resource>
 		</resources>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
@@ -35,7 +31,7 @@
 				<directory>src/main/java</directory>
 			</testResource>
 			<testResource>
-				<directory>src/junit</directory>
+				<directory>src/test/java</directory>
 			</testResource>
 		</testResources>
 
@@ -59,6 +55,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -90,13 +91,6 @@
 			<artifactId>commons-collections</artifactId>
 			<version>3.2.1</version>
 		</dependency>
-<!--
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4</version>
-		</dependency>
--->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -107,11 +101,11 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.2</version>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.6.2</version>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -146,14 +140,11 @@
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
-<!--
-			<exclusions>
-				<exclusion>
-					<groupId>commons-lang</groupId>
-					<artifactId>commons-lang</artifactId>
-				</exclusion>
-			</exclusions>
--->
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -166,7 +157,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
@@ -185,11 +176,6 @@
 			<version>1.8.5</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-  <groupId>commons-httpclient</groupId>
-  <artifactId>commons-httpclient</artifactId>
-  <version>3.1</version>
-</dependency>
-				
+
 	</dependencies>
 </project>
