Removes useless code or comments

--- a/java/beerduino.cfg
+++ b/java/beerduino.cfg
@@ -1,7 +1,7 @@
 <preferences>
    <mail>
          <destinataires>
-            <destinataire email="serge.simon@gmail.com" name="Serge SIMON"/>
+            <destinataire email="firstname.lastname@gmail.com" name="Yes it's you"/>
          </destinataires>
    </mail>
 <!--
