Notification threads now have a name

--- a/java/beerduino.cfg
+++ b/java/beerduino.cfg
@@ -5,7 +5,7 @@
          </destinataires>
    </mail>
 <!--
-   <push id="serge.simon" />
+   <push id="PushTo ID - see http://pushme.to" />
 -->
    <arduinoIp>127.0.0.1</arduinoIp>
    <arduinoPort>8080</arduinoPort>
