Changed default values Maven project set to 1.6

--- a/java/beerduino.cfg
+++ b/java/beerduino.cfg
@@ -1,14 +1,14 @@
 <preferences>
    <mail>
          <destinataires>
-            <destinataire email="firstname.lastname@gmail.com" name="Yes it's you"/>
+            <destinataire email="serge.simon@gmail.com" name="Yes it's you"/>
          </destinataires>
    </mail>
 <!--
    <push id="PushTo ID - see http://pushme.to" />
 -->
-   <arduinoIp>127.0.0.1</arduinoIp>
-   <arduinoPort>8080</arduinoPort>
+   <arduinoIp>192.168.1.101</arduinoIp>
+   <arduinoPort>80</arduinoPort>
    <seuils>
      <seuil capteur="1" temperature="21.9" />
      <seuil capteur="2" temperature="23" />
