--- a/java/pom.xml
+++ b/java/pom.xml
@@ -103,6 +103,11 @@
 	</profiles>
 
 	<dependencies>
+      <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>[2.2,)</version>
+       </dependency>	
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.3rdparty.rrd4j</artifactId>
